--- a/cases/templates/bribecaster/datatables.html
+++ b/cases/templates/bribecaster/datatables.html
@@ -475,6 +475,7 @@
 					                            <td>{{caseID}}</td> 
 					                            <td>{{office}}</td> 
 					                            <!-- <td>Date</td>  -->
+					                            {% csrf_token %}
 					                            <td><div class='text-center'>{% autoescape off %}{{sms}}{% endautoescape %}</td></div> 
 					                            <td><div class='text-center'>{% autoescape off %}{{robocall}}{% endautoescape %}</td></div> 
 					                            <td><div class='text-center'>{% autoescape off %}{{followup}}{% endautoescape %}</td></div> 
@@ -519,17 +520,18 @@
 							</div>
 							<div class="modal-body ">
 								
-						    	<h3 class='text-center'> Citizen Information </h3>
+						    	<h3> Citizen Information </h3>
 						        <table class="table table-striped table-bordered">
 							        <tr> 
-							            <td>First Name</td> 
-							            <td>Last Name</td>
+							            <td> First Name </td> 
+							            <td> Last Name </td>
 										<td> Phone Number </td>
 										<td> Gender </td>
 										<td> Age </td>
 										<td> Address </td>
 										<td> City </td>
 										<td> Aadhaar Number </td>
+									</tr>
 							        <tr>
 							            <td> {{ citizen.first_name }} </td> 
 							            <td> {{ citizen.last_name }} </td>
@@ -541,7 +543,7 @@
 							            <td> {{ citizen.aadhaar_number }} </td> 
 							        </tr>
 						        </table>
-						        <h3 class='text-center'> Office Information </h3>
+						        <h3> Office Information </h3>
 						        <table class="table table-striped table-bordered">
 							        <tr> 
 							            <td> Office Name </td>
@@ -554,6 +556,7 @@
 										<td> Cost Rating </td>
 										<td> Quality Rating </td>
 										<td> Region </td>
+									</tr>
 							        <tr>
 										<td> {{ office.office_name }} </td>
 										<td> {{ office.address }} </td>
@@ -566,12 +569,13 @@
 										<td> {{ office.quality_rating }} </td>
 										<td> {{ office.region }} </td>
 							        </tr>
-						        </table class="table table-striped table-bordered">
-						        <h3 class='text-center'> Office Visit </h3>
+						        </table>
+						        <h3> Office Visit </h3>
 						        <table class="table table-striped table-bordered">
 							        <tr> 
 										<td> Service Used </td>
 										<td> Time of Visit </td>
+									</tr>
 							        <tr>
 										<td> {{ visit.service_used }} </td>
 										<td> {{ visit.time_of_visit }} </td>
@@ -579,11 +583,18 @@
 						        </table>
 						        <h3> SMS </h3>
 						        {% if smsfeed %}
-						        <table class="table table-striped table-bordered">	     
-						        	{{ smsfeed }}
+						        <table class="table table-striped table-bordered">
+						        	<tr> 
+										<td> Time Text Sent </td>
+										<td> SMS Text Body/Status </td>
+									</tr>
+							        <tr>	     
+						        		<td> {{ smsfeed.message_sent_time}} </td>
+						        		<td> {{ smsfeed.sms_sent_text}} </td>
+						        	</tr>
 						        </table>
 						        {% else %}
-						        SMS not selected
+						        	SMS Not Sent. No Information Available.
 						        {% endif %}
 							</div>
 						</div><!-- /.modal-content -->
@@ -898,11 +909,20 @@
 	        for (var i = 0; i < length; i++) {
 	            (function assignListeners () { 
 	                var counter = i;
-	                if (document.getElementById('sms' + counter) != null) { 
-	                    document.getElementById('sms' + counter).addEventListener("click", function() {return replyText('sms' + counter)});
-	                    document.getElementById('robo' + counter).addEventListener("click", function() {return replyRobo('robo' + counter)});
-	                    document.getElementById('followup' + counter).addEventListener("click", function() {return replyFollowup('followup' + counter)});
-	                }
+                    $(document).on('click', "#sms" + counter, function(e) {
+                    	e.preventDefault();
+                    	$.ajax({
+					        url: "message",
+					        type : "POST",
+					        data : { phone_number : $("#sms" + counter).val(),
+					    			name : $("#sms" + counter).attr("name")},
+					    	 success : function() {
+					    	 	replyText("sms" + counter);
+					    	 },
+					    });
+					});
+                    document.getElementById('robo' + counter).addEventListener("click", function() {return replyRobo('robo' + counter)});
+                    document.getElementById('followup' + counter).addEventListener("click", function() {return replyFollowup('followup' + counter)});
 	            }())
 	        }  
     	</script>
